more mobile changes for cloud images on alt.fpo

--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -596,12 +596,12 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${_('Network Installers')}<span class="prerelease-offer">${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</span></h2>
+        <h2>${_('Cloud Base Images')}<span class="prerelease-offer">${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</span></h2>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('These are very small images you can use to install Fedora over the network.')}</p>
+        <p>${_('These are the Cloud Base Images you can use as qcow2 for Openstack or as a compressed raw image. You can use them also for deployment on Vagrant, as VirtualBox image or as libvirt/KVM image. Cloud Base images can be launched even in your Amazon Web Services account, just choose the format fitting your needs.')}</p>
         </div>
       </div>
       <div class="row">
@@ -650,12 +650,12 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${_('Network Installers')}<span class="prerelease-offer">${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</span></h2>
+        <h2>${_('Cloud Base Images')}<span class="prerelease-offer">${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</span></h2>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('These are very small images you can use to install Fedora over the network.')}</p>
+        <p>${_('These are the Cloud Base Images you can use as qcow2 for Openstack or as a compressed raw image. You can use them also for deployment on Vagrant, as VirtualBox image or as libvirt/KVM image. Cloud Base images can be launched even in your Amazon Web Services account, just choose the format fitting your needs.')}</p>
         </div>
       </div>
       <div class="row">
