--- a/spins.fedoraproject.org/data/content/soas/download/index.html
+++ b/spins.fedoraproject.org/data/content/soas/download/index.html
@@ -39,7 +39,7 @@
           <h4>${_('Direct Downloads')}</h4>
           <ul>
               <li>
-                  <p><a class="soas-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Spins/i386/iso/Fedora-SoaS-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sMB Live image')) % global_variables.iso_size['i686_Live_Soas']}</a></p>
+                  <p><a class="soas-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/i386/iso/Fedora-SoaS-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sMB Live image')) % global_variables.iso_size['i686_Live_Soas']}</a></p>
 <!--                  <p><a href="http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/i386/Fedora-SoaS-Live-i386-24-20160614.n.0.iso">${Markup(_('32-bit %sMB Live image')) % global_variables.iso_size['i686_Live_Soas']}</a></p> -->
               </li>
           </ul>
