--- a/labs.fedoraproject.org/data/content/security/download/index.html
+++ b/labs.fedoraproject.org/data/content/security/download/index.html
@@ -35,7 +35,7 @@
           <h4>${_('Direct Downloads')}</h4>
           <ul>
               <li>
-                  <p><a class="security-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Labs/i386/iso/Fedora-Security-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Security']}</a></p>
+                  <p><a class="security-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/i386/iso/Fedora-Security-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Security']}</a></p>
               </li>
           </ul>
           <h4>${_('Older Releases')}</h4>
