--- a/spins.fedoraproject.org/data/content/mate-compiz/download/index.html
+++ b/spins.fedoraproject.org/data/content/mate-compiz/download/index.html
@@ -35,7 +35,7 @@
           <h4>${_('Direct Downloads')}</h4>
           <ul>
               <li>
-                  <p><a class="mate-compiz-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Spins/i386/iso/Fedora-MATE_Compiz-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Mate']}</a></p>
+                  <p><a class="mate-compiz-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/i386/iso/Fedora-MATE_Compiz-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Mate']}</a></p>
               </li>
           </ul>
           <h4>${Markup(_('ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt; Technology'))}</h4>
