add the possibility to launch EC2 images directly to the Atomic page

--- a/getfedora.org/data/content/atomic/index.html
+++ b/getfedora.org/data/content/atomic/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="row">
         <div class="col-md-2 col-md-offset-1 text-center">
-            <p><a class="btn btn-success" href="./download/" role="button">${_('Download now')}</a></p>
+            <p><a class="btn btn-success" href="./download/" role="button">${_('Download or Launch in Public Cloud')}</a></p>
         </div>
       </div>
 
