add CDN77.com to the sponsors page

--- a/getfedora.org/data/content/sponsors.html
+++ b/getfedora.org/data/content/sponsors.html
@@ -42,45 +42,52 @@
 
   <div class="container recover-heading top-margin">
     <div class="row">
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
-        <a href="http://linux.dell.com/"><img src="${path}/static/images/sponsors/dell.gif" alt="Dell Inc." /></a>
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
+        <a href="http://linux.dell.com/"><img style="margin-top: 10px" src="${path}/static/images/sponsors/dell.gif" alt="Dell Inc." /></a>
       </div>
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
         <a href="http://www.proio.com/"><img src="${path}/static/images/sponsors/proio.jpg" alt="Proio" /></a>
       </div>
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
-        <a href="http://www.serverbeach.com/"><img style="vertical-align:middle" src="${path}/static/images/sponsors/serverBeach.png" alt="ServerBeach" /></a>
-      </div>
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
-        <a href="http://www.teliasoneraic.com/"><img src="${path}/static/images/sponsors/telia.png" alt="TeliaSonera" /></a>
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
+        <a href="http://www.serverbeach.com/"><img style="margin-top: 25px" src="${path}/static/images/sponsors/serverBeach.png" alt="ServerBeach" /></a>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
+        <a href="http://www.teliasoneraic.com/"><img style="margin-top: 15px" src="${path}/static/images/sponsors/telia.png" alt="TeliaSonera" /></a>
+      </div>
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
         <a href="http://osuosl.org/"><img src="${path}/static/images/sponsors/open_source_lab.png" alt="OSUOSL" /></a>
       </div>
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
         <a href="http://www.tummy.com/"><img src="${path}/static/images/sponsors/tummy.png" alt="Tummy" /></a>
-      </div>
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
-        <a href="http://www.colocationamerica.com"><img src="${path}/static/images/sponsors/colocation-america-logo.png" alt="ColocationAmerica" /></a>
-      </div>
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
-        <a href="https://www.dedicatedsolutions.com"><img src="${path}/static/images/sponsors/dedicatedsolutions.png" alt="Dedicated Solutions" /></a>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
+        <a href="http://www.colocationamerica.com"><img src="${path}/static/images/sponsors/colocation-america-logo.png" alt="ColocationAmerica" /></a>
+      </div>
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
+        <a href="https://www.dedicatedsolutions.com"><img style="margin-top: 10px" src="${path}/static/images/sponsors/dedicatedsolutions.png" alt="Dedicated Solutions" /></a>
+      </div>
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
         <a href="http://ibiblio.org/"><img src="${path}/static/images/sponsors/ibiblio.png" alt="ibiblio" /></a>
       </div>
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
         <a href="http://www.bodhost.com/"><img src="${path}/static/images/sponsors/bodhost.png" alt="BODHost" /></a>
       </div>
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
         <a href="http://www.host1plus.com"><img src="${path}/static/images/sponsors/host1plus.png" alt="host1plus" /></a>
       </div>
-      <div class="col-xs-12 col-md-3 text-center fedora-header">
-        <a href="http://www.internetx.com/"><img src="${path}/static/images/sponsors/internetx.png" alt="InterNetX" /></a>
+      <div class="col-xs-12 col-md-4 text-center fedora-header">
+        <a href="http://www.internetx.com/"><img style="margin-top: 10px" src="${path}/static/images/sponsors/internetx.png" alt="InterNetX" /></a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-md-4 col-md-offset-4 text-center fedora-header">
+        <a href="https://www.cdn77.com/"><img src="${path}/static/images/sponsors/cdn77.png" alt="CDN77.com" /></a>
       </div>
     </div>
   </div>
