--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -29,15 +29,14 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="large-icon"><i class="fa fa-calendar"></i></div>
           <h2>Schedule</h2>
-          <p>
-            The entire schedule for Flock 2016 is available on <a href="https://flock2016.sched.org/">sched.org</a>.
-          </p>
-          <p>
-            Flock 2016 features two keynote presentations. The first is the State of Fedora 2016 Keynote
-	    on Tuesday morning by <a href="https://mattdm.org/">Matthew Miller</a>, the Fedora Project Leader.
-            On Wednesday, the second keynote will be presented by Radosław Krowiak, the co-owner of
-	    <a href="http://www.akademiaprogramowania.pl/">Akademia Programowania</a>.
-          </p>
+					<p>
+						Flock 2017 is a more <strong>action-oriented event</strong> than previous years. This affects the types of session proposals that will be accepted. A team status report is less likely to be accepted than a collaborative team working session or a workshop.
+					</p>
+					<p>
+						The Flock 2017 planning committee will focus on ensuring the right folks can attend these working sessions, so expect a productive and energizing event!
+					</p>
+					<h4>Our CFP is open from May 1 - June 1, 2017.</h4>
+					<h4><a href="#">Submit your session proposal now.</a></h4>
         </div>
       </div>
     </div>
@@ -48,34 +47,30 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="large-icon"><i class="fa fa-comments-o"></i></div>
-          <h2>Communicate with other Flock attendees</h2>
+          <h2>Social</h2>
           <br/>
           <h3>Mailing List</h3>
           <p>
-            The <a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2016@lists.fedoraproject.org/">
-            Flock attendees 2016 mailing list</a> is the primary means of communication
-            for attendees of Flock. If you pre-registered for Flock, you should
-            already be subscribed to this list.
+            The <a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2017@lists.fedoraproject.org/">Flock attendees 2017 mailing list</a> is the primary means of communication for attendees of Flock. If you register for Flock, you will be subscribed to this list.
           </p>
+					<ul>
+						<li><a href="https://lists.fedoraproject.org/accounts/signup/?next=/archives/">Subscribe now.</a></li>
+						<li><a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2017@lists.fedoraproject.org/">Read list postings now.</a></li>
+					</ul>
           <hr/>
           <h3>IRC</h3>
           <p>
-            Our main IRC channel for the event is <strong>#fedora-flock</strong>. If you are taking notes for a
-            session, please report the session name and channel to that channel. If you are using
-            Gobby or Etherpad, note that in the main channel as well. Each session room also has
-            a dedicated channel in IRC, and some sessions are being transcribed there. The room IRC channels are:
-            #fedora-flock-malczewski #fedora-flock-chelmonski #fedora-flock-matejko #fedora-flock-canaletto #fedora-flock-picasso #fedora-flock-openqa #fedora-flock-monet
+            Our main IRC channel for the event is <a href="https://webchat.freenode.net/?channels=#fedora-flock">#fedora-flock</a> on <strong>irc.freenode.net</strong>. Each session room also has a dedicated channel in IRC, and some sessions will be transcribed there.
           </p>
+					<ul>
+						<li><a href="https://webchat.freenode.net/?channels=#fedora-flock">Join #fedora-flock now.</a></li>
+						<li><a href="#">View full list of Flock channels.</a></li>
+					</ul>
           <hr/>
           <h3>Telegram</h3>
           <p>
-            There is a Telegram group for Flock for general Flock discussion and communication.
-            You can add it at: <a href="http://bit.ly/flock2016tg">http://bit.ly/flock2016tg</a>
+            Telegram channel TBA
           </p>
-	  <p>
-	    There is another Telegram channel just for Flock
-	    announcements. You can add it at: <a href="http://telegram.me/flock2016announce">http://telegram.me/flock2016announce</a>
-	  </p>
         </div>
       </div>
     </div>
@@ -86,10 +81,19 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="large-icon"><i class="fa fa-bus"></i></div>
-          <h2>Transportation around Krakow</h2><b4/>
-	  <p>
-	    For the latest travel information, refer to <a href="https://fedoraproject.org/wiki/Flock2016-Krakow-proposal#Getting_There">this Fedora Project wiki page</a>.
-	  </p>
+          <h2>Transportation</h2><b4/>
+					<p>
+						There are many transportation options to get to, from, and around Hyannis and Cape Cod.
+					</p>
+					<p>
+						The closest international airport is <strong>Logan International Airport in Boston, MA.</strong>
+					</p>
+					<p>
+						The <strong>Plymouth &amp; Brockton bus line</strong> has a direct bus from Logan to the <strong>Hyannis Transportation Center</strong>; it is a 2-hour trip one-way.
+					</p>
+					<p>
+						Here is a <a href="#">detailed overview of transportation options</a>.
+					</p>
         </div>
       </div>
     </div>
@@ -102,10 +106,10 @@
           <div class="large-icon"><i class="fa fa-building"></i></div>
           <h2>Venue and Hotel</h2>
           <p>
-            BEST WESTERN PREMIER KRAKOW HOTEL<br/>
-ul. Opolska 14a, 31-323 Kraków, Poland <br/>
-telephone: +48 12 376 37 00 or +48 801 08 02 60 <br/>
-GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
+            The Resort and Conference Center at Hyannis<br/>
+						35 Scudder Avenue, Hyannis, Massachusetts USA 02601<br/>
+						+1 (866) 828-8259<br/>
+						<a href="mailto:info@capecodresortandconference.com">info@capecodresortandconference.com</a>
           </p>
         </div>
       </div>
@@ -118,52 +122,7 @@ GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="large-icon"><i class="fa fa-moon-o"></i></div>
           <h2>Evening Events</h2><br/>
-          <h4><strong>Walking Tour &amp; Flock Game Night </strong> &mdash; Tuesday August 2</h4>
-          <p>
-            Krakow, a historically significant city in Poland, is on display tonight.
-            Join us for a roughly 90-minute walking tour of the old city center and
-            learn about our host city. The tour will begin with a bus from the
-            hotel. <strong>The bus will depart at approximately 6:50 pm.</strong> The tour will
-            end with either a bus back to the hotel or advice on nightlife options.
-            If you wish to take your own transportation, the tour will depart from
-            Matejki Square at 7:30 pm and end on Wawel Hill at about 9 pm.
-          </p>
-          <p>
-            Additionally, board games and a retro gaming zone will be available
-            for general socializing and fun in the hotel starting at 7:30 pm. The board
-            games will take place in the Rembrandt and Monet rooms. The retro
-            gaming zone will be set up in the Malczewski room.
-          </p>
-          <hr/>
-          <h4><strong>Cruise Krakow</strong> &mdash; Wednesday August 3</h4>
-          <p>
-            Join us for a dinner and optional cruise on the beautiful Vistula River.
-            A fantastic buffet dinner and drinks will be available for all to enjoy.
-            There will be two cruise options during the dinner. Details on these
-            thirty minute cruises will be provided at the dinner. Dinner starts at
-            7:30 pm. <strong>Buses will depart the hotel at approximately 6:30 pm
-            and 7:20 pm.</strong> Buses will begin returning to the hotel at about 9:40
-            pm. The specific pier being used for the cruise will be announced on
-            Wednesday morning.
-          </p>
-          <hr/>
-          <h4><strong>Brewery Lubicz</strong> &mdash; Thursday August 4</h4>
-          <p>
-            A feast and beer tasting awaits us at Browar Lubicz, a recently-
-            restored brewery. The brewery dates from 1840 and has been
-            brewing beer almost continuously, even during nationalization in the
-            1950s. Restored in September 2015, the brewery is a high point of a
-            trip to Krakow. There will be non-beer options available. Dinner
-            starts at 7:30 pm. <strong>Buses will depart the hotel at approximately
-            6:30 pm and 7:20 pm.</strong> Buses will begin returning to the hotel at
-            about 9:40 pm. Don't forget to look for QR codes at the brewery to
-            get a special Fedora badge for attending this event.
-            </p>
-            <p>
-            If you wish to take your own transportation, dinner is located at:
-            Restauracja Browar Lubicz, ul. Lubicz 17 J, 31-503 Kraków
-          </p>
-
+					<p>Information coming soon.</p>
         </div>
       </div>
     </div>
@@ -176,58 +135,24 @@ GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
           <div class="large-icon"><i class="fa fa-credit-card"></i></div>
           <h2>Sponsors</h2><br/>
           <p>
-	    The Flock 2016 conference organizers thank the following for
-	    their support of this event.
-	  </p>
-	  <br/>
-	  <h3>Platinum Level</h3>
-	  <p>
-	    <a href="https://www.redhat.com"><img src="../../static/images/sponsors/redhat.png"/></a>
-	  </p>
-	  <br/>
-	  <h3>Gold Level</h3>
-	  <p>
-	    <a href="https://www.opensuse.org"><img src="../../static/images/opensuse.png"
-	    width="265" height="134"/></a>
-	  </p>
-	  <br/>
-	  <h3>Bronze Level</h3>
-	  <p>
-	    <a href="https://www.linuxfoundation.org"><img src="../../static/images/LF_logo_NEW_Pantone.png" width="227" height="75"/></a>
-	    <a href="https://www.stickermule.com"><img src="../../static/images/sticker-mule.png" width="250" height="75"/></a>
-	    <a href="https://www.unixstickers.com"><img src="../../static/images/unixstickers.png" width="287" height="75"/></a>
-	  </p>
-	</div>
+						Sponsorship opportunities are still open. For information, contact <a href="mailto:flockinfo@fedoraproject.org">flockinfo@fedoraproject.org</a>.
+					</p>
+					<br/>
+					<h3>Platinum Level</h3>
+					<p>
+						<a href="https://www.redhat.com"><img src="../../static/images/sponsors/redhat.png"/></a>
+					</p>
+					<br/>
+					<h3>Gold Level</h3>
+					<p>
+					</p>
+					<br/>
+					<h3>Bronze Level</h3>
+					<p>
+					</p>
+				</div>
       </div>
-    </div>
-    </div>
-
-    <div id="photos" class="non-jumbo text-center">
-      <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <div class="large-icon"><i class="fa fa-image"></i></div>
-          <h2>Day 1 Photos</h2><br/>
-          <!--  IMG_9187.JPG-THUMB.JPG  IMG_9192.JPG-THUMB.JPG  IMG_9204.JPG-THUMB.JPG  IMG_9214.JPG-THUMB.JPG
-IMG_9177.JPG-THUMB.JPG  IMG_9181.JPG-THUMB.JPG  IMG_9186.JPG-THUMB.JPG  IMG_9191.JPG-THUMB.JPG  IMG_9195.JPG-THUMB.JPG  IMG_9206.JPG-THUMB.JPG
-          -->
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9176.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9176.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9178.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9178.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9183.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9183.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9187.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9187.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9192.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9192.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9204.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9204.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9214.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9214.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9177.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9177.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9181.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9181.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9186.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9186.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9191.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9191.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9195.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9195.JPG-THUMB.JPG"/></a>
-          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9206.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9206.JPG-THUMB.JPG"/></a>
-
-        </div>
-      </div>
-    </div>
+			</div>
     </div>
 
   </body>
