Fix an obsolete gpg key labeled as UID
The obsolete keys page is a data store of old fedora keys. There was one
field containing a gpg key that was labeled as a UID instead of a sub.
This broke aautomated parsing discovery of obsolete keys.

Signed-off-by: Robert Marshall <rmarshall@redhat.com>

--- a/getfedora.org/data/content/keys/obsolete.html
+++ b/getfedora.org/data/content/keys/obsolete.html
@@ -400,10 +400,9 @@
               [
                   'Fedora Project &lt;fedora-extras@fedoraproject.org&gt;',
                   'Fedora Pre Extras Release &lt;pre-extras@fedoraproject.org&gt;',
-                  'Fedora Project &lt;fedora-extras@redhat.com&gt;',
-                  '1024g/4E1A9D43 2004-12-14'
+                  'Fedora Project &lt;fedora-extras@redhat.com&gt;'
               ],
-              None,
+              '1024g/4E1A9D43 2004-12-14',
               [],
               Markup(_('If you are using Fedora Extras with Fedora Core 6, use this package from &lt;strong&gt;extras&lt;/strong&gt; repository.  This key will no longer be used after Fedora Core 6 and Extras reach EOL (December 7th 2007). This key is not included in the &lt;strong&gt;fedora-release&lt;/strong&gt; package in Fedora 7 and later releases.')))
       ])}
