[labs.fp.o] add featured apps to python-classroom

--- a/labs.fedoraproject.org/data/content/python-classroom/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/index.html
@@ -5,7 +5,7 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../templates/master.html" />
   <head>
-    <title>${_('Robotics Suite')}</title>
+    <title>${_('Python Classroom')}</title>
   </head>
   <body>
 
@@ -46,78 +46,78 @@
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/robotics/player.png" alt="Player" />
-          	<h4>${_('Player')}</h4>
-          	<p>${_('Robot server and framework for advanced robotic systems.')}</p>
-          	<a href="http://playerstage.sourceforge.net/">${Markup(_('Learn More &gt;'))}</a>
+            <img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
+            <h4>${_('Python 3.6')}</h4>
+            <p>${_('Version 3.6 of the Python programming language')}</p>
+            <a href="https://python.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/robotics/simspark.png" alt="SimSpark" />
-          	<h4>${_('SimSpark')}</h4>
-          	<p>${_('Physical simulator for multi-agent robotics research.')}</p>
-          	<a href="http://simspark.sourceforge.net/">${Markup(_('Learn More &gt;'))}</a>
+          <img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
+            <h4>${_('Python 2.7')}</h4>
+            <p>${_('Version 2.7 of the Python programming language')}</p>
+            <a href="https://python.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-	      	<img src="${path}/static/images/robotics/fawkes.png" alt="Fawkes" />
-          	<h4>${_('Fawkes')}</h4>
-          	<p>${_('Modular framework for high performance robotic systems.')}</p>
-          	<a href="http://fawkesrobotics.org/">${Markup(_('Learn More &gt;'))}</a>
-          </div>
-        </div>
-      </div>
-      <div class="row top-margin bottom-margin">
-        <div class="col-md-4 col-xs-12 text-center">
-          <div class="border">
-          	<img src="${path}/static/images/robotics/gazebo.png" alt="Gazebo" />
-          	<h4>${_('Gazebo')}</h4>
-          	<p>${_('A versatile and powerful 3D robotics simulator with realistic physics.')}</p>
-          	<a href="http://gazebosim.org/">${Markup(_('Learn More &gt;'))}</a>
-          </div>
-        </div>
-        <div class="col-md-4 col-xs-12 text-center">
-          <div class="border">
-          	<img src="${path}/static/images/robotics/stage.png" alt="Stage" />
-          	<h4>${_('Stage')}</h4>
-          	<p>${_('A flexible 2.5D simulator for robotic sensors and movement.')}</p>
-          	<a href="http://rtv.github.io/Stage">${Markup(_('Learn More &gt;'))}</a>
-          </div>
-        </div>
-        <div class="col-md-4 col-xs-12 text-center">
-          <div class="border">
-	      	<img src="${path}/static/images/robotics/pcl.png" alt="PCL" />
-          	<h4>${_('PCL')}</h4>
-          	<p>${_('The Point Cloud Library (PCL) is a standalone, large scale, open project for 2D/3D image and point cloud processing.')}</p>
-          	<a href="http://pointclouds.org/">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/python-classroom/ipython.png" alt="ipython" />
+          	<h4>${_('IPython')}</h4>
+          	<p>${_('An enhanced interactive Python shell')}</p>
+          	<a href="https://ipython.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
       </div>
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/robotics/arduino.png" alt="Arduino" />
-          	<h4>${_('Arduino')}</h4>
-          	<p>${_('Development environment for the Arduino open source hardware platform.')}</p>
-          	<a href="http://www.arduino.cc/">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/python-classroom/jupyter-notebook.png" alt="Jupyter Notebook" />
+          	<h4>${_('Jupyter Notebook')}</h4>
+          	<p>${_('A web-based notebook environment for interactive computing')}</p>
+          	<a href="http://jupyter.org">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/robotics/eclipse.png" alt="Eclipse" />
-          	<h4>${_('Eclipse')}</h4>
-          	<p>${_('Powerful and extensible multi-language integrated development environment.')}</p>
-          	<a href="http://eclipse.org/">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/python-classroom/pypy.png" alt="PyPy" />
+          	<h4>${_('PyPy')}</h4>
+          	<p>${_('Python implementation with a Just-In-Time compiler')}</p>
+          	<a href="https://pypy.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-	      	<img src="${path}/static/images/robotics/mrpt.png" alt="MRPT" />
-          	<h4>${_('MRPT')}</h4>
-          	<p>${_('Libraries and applications for robotics system development.')}</p>
-          	<a href="http://www.mrpt.org/">${Markup(_('Learn More &gt;'))}</a>
+	      	<img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
+          	<h4>${_('tox')}</h4>
+          	<p>${_('virtualenv management and test command line tool')}</p>
+          	<a href="https://github.com/tox-dev/tox">${Markup(_('Learn More &gt;'))}</a>
+          </div>
+        </div>
+      </div>
+      <div class="row top-margin bottom-margin">
+        <div class="col-md-4 col-xs-12 text-center">
+          <div class="border">
+          	<img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
+          	<h4>${_('virtualenv')}</h4>
+          	<p>${_('Create isolated python environments')}</p>
+          	<a href="https://github.com/pypa/virtualenv">${Markup(_('Learn More &gt;'))}</a>
+          </div>
+        </div>
+        <div class="col-md-4 col-xs-12 text-center">
+          <div class="border">
+          	<img src="${path}/static/images/python-classroom/ninja-ide.png" alt="Ninja IDE" />
+          	<h4>${_('Ninja IDE')}</h4>
+          	<p>${_('Integrated Development Environment for Python')}</p>
+          	<a href="http://ninja-ide.org/">${Markup(_('Learn More &gt;'))}</a>
+          </div>
+        </div>
+        <div class="col-md-4 col-xs-12 text-center">
+          <div class="border">
+	      	<img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
+          	<h4>${_('Python 3 IDLE')}</h4>
+          	<p>${_('Python’s Integrated Development and Learning Environment')}</p>
+          	<a href="https://docs.python.org/3/library/idle.html">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
       </div>
