[labs.fp.o] change spins to labs in python-classroom download page

--- a/labs.fedoraproject.org/data/content/python-classroom/download/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/index.html
@@ -88,12 +88,12 @@
   	<div class="row bottom-space visible-xs">
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Downloading')}</h2>
-	      <p class="text-justify">${_('Spin downloads are offered via direct download, but you can also get them via BitTorrent. In this case you will need to install a BitTorrent client in order to download a spin. If you cannot use Bittorrent, some spins offer alternative download methods.')}</p>
+	      <p class="text-justify">${_('Lab downloads are offered via direct download, but you can also get them via BitTorrent. In this case you will need to install a BitTorrent client in order to download a lab. If you cannot use Bittorrent, some labs offer alternative download methods.')}</p>
 	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/Fedora/20/html/Installation_Guide/ch-new-users.html#sn-howto-download" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Installing')}</h2>
-	      <p class="text-justify">${_('To install a spin, you run the spin on your computer and click the "Install to Hard Drive" link on the desktop. You\'ll be guided through the install process via a series of prompts.')}</p>
+	      <p class="text-justify">${_('To install a lab, you run the lab on your computer and click the "Install to Hard Drive" link on the desktop. You\'ll be guided through the install process via a series of prompts.')}</p>
 	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/Fedora/20/html/Burning_ISO_images_to_disc/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-xs-12 text-center">
@@ -103,15 +103,15 @@
   	  </div>
   	</div>
 
-  <!-- Using Spins for desktop and tablet -->
+  <!-- Using labs for desktop and tablet -->
   	<div class="row hidden-xs">
   	  <div class="col-sm-4 text-center">
   	  	<h2>${_('Downloading')}</h2>
-	      <p class="text-justify">${_('Spin downloads are offered via direct download, but you can also get them via BitTorrent. In this case you will need to install a BitTorrent client in order to download a spin. If you cannot use Bittorrent, some spins offer alternative download methods.')}</p>
+	      <p class="text-justify">${_('lab downloads are offered via direct download, but you can also get them via BitTorrent. In this case you will need to install a BitTorrent client in order to download a lab. If you cannot use Bittorrent, some labs offer alternative download methods.')}</p>
   	  </div>
   	  <div class="col-sm-4 text-center">
   	  	<h2>${_('Installing')}</h2>
-	      <p class="text-justify">${_('To install a spin, you run the spin on your computer and click the "Install to Hard Drive" link on the desktop. You\'ll be guided through the install process via a series of prompts.')}</p>
+	      <p class="text-justify">${_('To install a lab, you run the lab on your computer and click the "Install to Hard Drive" link on the desktop. You\'ll be guided through the install process via a series of prompts.')}</p>
   	  </div>
   	  <div class="col-sm-4 text-center">
   	  	<h2>${_('Using')}</h2>
