[labs.fp.o] add screenshots to python classroom

--- a/labs.fedoraproject.org/data/content/python-classroom/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/index.html
@@ -40,6 +40,28 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
+          <h2>${_('Screenshots')}</h2>
+        </div>
+      </div>
+      <div class="row top-margin bottom-margin">
+        <div class="col-md-4 col-xs-12 text-center">
+          <a href="${path}/static/images/python-classroom/screenshot1.png">
+            <img src="${path}/static/images/python-classroom/screenshot1.png" alt="Screenshot of Python Classroom" />
+          </a>
+        </div>
+        <div class="col-md-4 col-xs-12 text-center">
+          <a href="${path}/static/images/python-classroom/screenshot2.png">
+            <img src="${path}/static/images/python-classroom/screenshot2.png" alt="Screenshot of Python Classroom" />
+          </a>
+        </div>
+        <div class="col-md-4 col-xs-12 text-center">
+          <a href="${path}/static/images/python-classroom/screenshot3.png">
+            <img src="${path}/static/images/python-classroom/screenshot3.png" alt="Screenshot of Python Classroom" />
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
           <h2>${_('Featured Applications')}</h2>
         </div>
       </div>
