[labs.fp.o] stlithgly adjust the apps of python classroom

--- a/labs.fedoraproject.org/data/content/python-classroom/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/index.html
@@ -68,18 +68,18 @@
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-            <img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
-            <h4>${_('Python 3.6')}</h4>
-            <p>${_('Version 3.6 of the Python programming language')}</p>
-            <a href="https://python.org/">${Markup(_('Learn More &gt;'))}</a>
+            <img src="${path}/static/images/python-classroom/pypy.png" alt="PyPy Logo" />
+            <h4>${_('Multiple Pythons (CPython 3.6 & 2.7, PyPy 3.3)')}</h4>
+            <p>${_('Multiple implmentaions of the Python programming language, including CPython 3.61 2.7 and PyPy 3.3')}</p>
+            <a href="https://developer.fedoraproject.org/tech/languages/python/multiple-pythons.html">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
           <img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
-            <h4>${_('Python 2.7')}</h4>
-            <p>${_('Version 2.7 of the Python programming language')}</p>
-            <a href="https://python.org/">${Markup(_('Learn More &gt;'))}</a>
+            <h4>${_('Scientific Python stack')}</h4>
+            <p>${_('All you need to learn or teach science in Python including SciPy')}</p>
+            <a href="https://developer.fedoraproject.org/tech/languages/python/scipy.html">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
@@ -96,16 +96,16 @@
           <div class="border">
           	<img src="${path}/static/images/python-classroom/jupyter-notebook.png" alt="Jupyter Notebook" />
           	<h4>${_('Jupyter Notebook')}</h4>
-          	<p>${_('A web-based notebook environment for interactive computing')}</p>
+          	<p>${_('A web-based notebook environment for interactive computing and visualizations')}</p>
           	<a href="http://jupyter.org">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/python-classroom/pypy.png" alt="PyPy" />
-          	<h4>${_('PyPy')}</h4>
-          	<p>${_('Python implementation with a Just-In-Time compiler')}</p>
-          	<a href="https://pypy.org/">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/python-classroom/git.png" alt="git" />
+          	<h4>${_('git')}</h4>
+          	<p>${_('Popular version control system')}</p>
+          	<a href="https://git-scm.com/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
@@ -113,7 +113,7 @@
 	      	<img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
           	<h4>${_('tox')}</h4>
           	<p>${_('virtualenv management and test command line tool')}</p>
-          	<a href="https://github.com/tox-dev/tox">${Markup(_('Learn More &gt;'))}</a>
+          	<a href="http://tox.readthedocs.io/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
       </div>
@@ -121,9 +121,9 @@
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
           	<img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
-          	<h4>${_('virtualenv')}</h4>
+          	<h4>${_('virtual environments')}</h4>
           	<p>${_('Create isolated python environments')}</p>
-          	<a href="https://github.com/pypa/virtualenv">${Markup(_('Learn More &gt;'))}</a>
+          	<a href="https://developer.fedoraproject.org/tech/languages/python/python-installation.html">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
@@ -136,7 +136,7 @@
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-	      	<img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
+	      	<img src="${path}/static/images/python-classroom/idle.png" alt="Python 3 IDLE" />
           	<h4>${_('Python 3 IDLE')}</h4>
           	<p>${_('Python’s Integrated Development and Learning Environment')}</p>
           	<a href="https://docs.python.org/3/library/idle.html">${Markup(_('Learn More &gt;'))}</a>
