[labs.fp.o] fix typo in python-classroom index.html

--- a/labs.fedoraproject.org/data/content/python-classroom/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/index.html
@@ -70,7 +70,7 @@
           <div class="border">
             <img src="${path}/static/images/python-classroom/pypy.png" alt="PyPy Logo" />
             <h4>${_('Multiple Pythons (CPython 3.6 & 2.7, PyPy 3.3)')}</h4>
-            <p>${_('Multiple implmentaions of the Python programming language, including CPython 3.61 2.7 and PyPy 3.3')}</p>
+            <p>${_('Multiple implementations of the Python programming language, including CPython 3.61 2.7 and PyPy 3.3')}</p>
             <a href="https://developer.fedoraproject.org/tech/languages/python/multiple-pythons.html">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
