updating header and banner for flock cod 2017

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -10,7 +10,8 @@
 
   <body class="home" data-spy="scroll" data-target="#flocknav">
     <xi:include href="../templates/head.html" />
-    <div id="welcome" class="non-jumbo flock-groupimg text-center">
+    <div id="welcome" class="non-jumbo text-center">
+      <div id="welcome2" class="non-jumbo">
   	  <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -21,6 +22,7 @@
           </div>
         </div>
   	  </div>
+      </div>
     </div>
 
     <div id="schedule" class="non-jumbo text-center">
